--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      </section>
      <hr/>
      <section id="image">
-        <img src="./images/book1.jpeg" alt="books image" width="400">
+        <img src="book1.jpeg" alt="books image" width="400">
      </section>
      <hr/>
      <section id="OurServices">
@@ -109,4 +109,5 @@
      </footer>
      <!-- footer section ends here -->
      </body>
+
 </html>
